fix: spacing and start form

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,6 @@ body {
   background-repeat: no-repeat;
 }
 
-#navbar {
-  margin-bottom: 50px;
-}
-
 #navbar .nav-page {
   color: white;
 }
